--- a/kancmatket_html/contact_history.html
+++ b/kancmatket_html/contact_history.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" type="text/css" href="css/slick.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+  <script   src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"   integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="   crossorigin="anonymous"></script>
 </head>
 <body>
 <nav class="navbar">
@@ -177,47 +178,121 @@
 <div class="container">
     <ol class="breadcrumb">
   <li class="breadcrumb-item"><a href="#">Главная</a></li>
-   <li class="breadcrumb-item active"><a href="#">Доставка и оплата</a></li>
+  <li class="breadcrumb-item active"><a href="#"></a></li>
 </ol>
 </div>
 <div class="main_wrapper">
   <div class="container">
-    <h3>Доставка и оплата</h3>
-      <div class=" clearfix">
-        <div class="col-md-12">
-          <img src="img/about_pic.png" style="width: 100%;">
-        <div class="shipping clearfix">
-        <h3>Доставка</h3>
-            <div class="col-md-6 shipping_item">
-              <img src="img/loyalty_pic.png">
-              <div class="payment_description">
-                Lorem ipsum dolor sitя amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </div>
-            </div>
-            <div class="col-md-6 shipping_item">
-              <img src="img/loyalty_pic.png">
-              <div class="payment_description">
-                Lorem ipsum dolor sitя amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </div>
-            </div>
-          </div>
-           <div class="payment clearfix">
-           <h3>Оплата</h3>
-            <div class="col-md-6 payment_item">
-              <img src="img/loyalty_pic.png">
-              <div class="payment_description">
-                Lorem ipsum dolor sitя amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </div>
-            </div>
-            <div class="col-md-6 payment_item">
-              <img src="img/loyalty_pic.png">
-              <div class="payment_description">
-                Lorem ipsum dolor sitя amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </div>
-            </div>
-          </div>
-  </div>
-</div>
+  <h3>Личный кабинет</h3>
+   <div class="tab_info clearfix">
+      <div class="tabs clearfix">
+      <div class="tabs_controls">
+        <div class="tabs_controls_item active">Личный кабинет</div>
+        <div class="tabs_controls_item">История</div>
+      </div>
+    </div>
+    <div class="tabs_content">
+      <div class="tabs_list clearfix">
+        <div class="tabs_item active animated">
+          <form>
+            <label>Введите Ваше имя</label><br><input type="text" placeholder=""><br>
+            <label>Введите Ваш email</label><br><input type="text" placeholder=""><br>
+            <label>Введите Ваш телефон</label><br><input type="text" placeholder=""><br>
+            <div style="height: 1px; border-bottom: 1px dashed #aaa; margin-bottom: 20px;margin-top: 20px;"></div>
+            <!-- Day dropdown -->
+            <label style="margin-bottom: 10px;">Введите дату Вашего рождения</label><br>
+            <select name="day" id="day" onchange="" size="1">
+                <option value="день">день</option>
+                <option value="01">01</option>
+                <option value="02">02</option>
+                <option value="03">03</option>
+                <option value="04">04</option>
+                <option value="05">05</option>
+                <option value="06">06</option>
+                <option value="07">07</option>
+                <option value="08">08</option>
+                <option value="09">09</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+                <option value="16">16</option>
+                <option value="17">17</option>
+                <option value="18">18</option>
+                <option value="19">19</option>
+                <option value="20">20</option>
+                <option value="21">21</option>
+                <option value="22">22</option>
+                <option value="23">23</option>
+                <option value="24">24</option>
+                <option value="25">25</option>
+                <option value="26">26</option>
+                <option value="27">27</option>
+                <option value="28">28</option>
+                <option value="29">29</option>
+                <option value="30">30</option>
+                <option value="31">31</option>
+            </select>
+            <select name="month" id="month" onchange="" size="1">
+             <option value="месяц">месяц</option>
+                <option value="01">Январь</option>
+                <option value="02">Февраль</option>
+                <option value="03">Март</option>
+                <option value="04">Апрель</option>
+                <option value="05">Май</option>
+                <option value="06">Июнь</option>
+                <option value="07">Июль</option>
+                <option value="08">Август</option>
+                <option value="09">Сентябрь</option>
+                <option value="10">Октябрь</option>
+                <option value="11">Ноябрь</option>
+                <option value="12">Декабрь</option>
+          </select>
+          <select name="yearpicker" id="yearpicker"></select>
+          <div style="height: 1px; border-bottom: 1px dashed #aaa; margin-bottom: 20px;margin-top: 20px;"></div>
+           <label>Введите пароль</label><br><input type="text" placeholder=""><br>
+            <label>Повторите пароль</label><br><input type="text" placeholder=""><br>
+          </form>
+        </div>
+        <div class="tabs_item animated">
+            <table class="table">
+          <thead>
+            <tr>
+              <th>Дата</th>
+              <th>НОМЕР ЗАКАЗА</th>
+              <th>СУММА</th>
+              <th>СТАТУС</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">20.10.16</th>
+              <td>№#####</td>
+              <td>222</td>
+              <td>ОПЛАЧЕНО</td>
+            </tr>
+            <tr>
+               <th scope="row">20.10.16</th>
+              <td>№#####</td>
+              <td>200</td>
+              <td>ОПЛАЧЕНО</td>
+            </tr>
+            <tr>
+               <th scope="row">20.10.16</th>
+              <td>№#####</td>
+              <td>3000</td>
+              <td>ОПЛАЧЕНО</td>
+            </tr>
+          </tbody>
+        </table>
+        </div>
+        <div class="save"><a href="">Сохранить</a></div>
+         <div class="edit_history"><a href="">Редактировать</a></div>
+      </div>
+    </div>
+    </div>
 </div>
 </div>
 <footer>
@@ -234,7 +309,7 @@
     <div class="col-md-4 wrapper_footer">
     <h3>Сервисы</h3>
       <ul class="footer_contacts_list">
-        <ul class="footer_contacts_list">
+       <ul class="footer_contacts_list">
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="about.html">О нас</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="news_main.html">Новости</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="loyalty.html">Акции</a></li>
