--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -19,9 +19,10 @@
   <div class="container clearfix top_nav">
    <a class="navbar-brand page-scroll" href="index.html"><img src="img/logo_new.png"  id="logo" alt="logo top"></a> 
     
-<div class="login"><i class="fa fa-user" aria-hidden="true"></i><span>Вход в личный кабинет</span>
-  <div class="login_item animated slideInDown clearfix">
-  <ul class="login_popup_tabs clearfix">
+        <div class="login">
+              <a href="" class="callback_btn2"><i class="fa fa-user" aria-hidden="true"></i>Вход в личный кабинет</a>
+              <div id="modal_form_recall2" class="login_item animated"> 
+                  <ul class="login_popup_tabs clearfix">
   <li class="active"><a data-toggle="tab" href="#home">Авторизация</a></li>
   <li class="noactive"><a data-toggle="tab" href="#menu1">Регистрация</a></li>
 </ul>
@@ -33,7 +34,7 @@
       <input type="text" placeholder="Введите Ваш пароль">
     </form>
     <span class="no_authorize">Продолжить без авторизации</span>
-    <a class="product_buy_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
+    <a class="product_buy_btn product_buy_btn_card" href="" style="margin-top: 10px;">
             <span>Авторизороваться</span>
         </a>
   </div>
@@ -44,10 +45,11 @@
       <input type="text" placeholder="Введите Ваш Email">
       </form>
       <span class="no_authorize">Продолжить без регистрации</span>
-    <a class="product_buy_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
+    <a class="product_buy_btn product_buy_btn_card" href="" style="margin-top: 10px;">
             <span>Зарегистрироваться</span>
         </a>
   </div>
+          
 </div>
   </div>
 </div>
@@ -96,12 +98,13 @@
         </div>
             </div>
           </div>
-        <div class="clearfix cart">
-          <a class="shopping_cart" href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
-          <div class="bucket animated slideInDown clearfix">
-   <div class="order_list_item">
+        <div class=" clearfix">
+            <div class="callback1">
+              <a href="" class="callback_btn1"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+              <div id="modal_form_recall1" class="animated"> 
+                  <div class="order_list_item">
       <span class="order_item_close"><i class="fa fa-times" aria-hidden="true"></i></span>
-         <a href="backet.html"><img src="img/order_list.png"></a>
+        <img src="img/order_list.png">
           <div class="order_list_description">
           <h4 class="order_list_item_header">Заголовок маркера</h4>
           <span class="order_list_item_quantity">2 <span>шт</span></span>
@@ -110,7 +113,7 @@
       </div>
     <div class="order_list_item">
       <span class="order_item_close"><i class="fa fa-times" aria-hidden="true"></i></span>
-        <a href="backet.html"><img src="img/order_list.png"></a>
+        <img src="img/order_list.png">
           <div class="order_list_description">
           <h4 class="order_list_item_header">Заголовок маркера</h4>
           <span class="order_list_item_quantity">2 <span>шт</span></span>
@@ -121,10 +124,10 @@
   
   <div class="order_list_total">
         <div class="order_list_total_item">Итого:<span class="order_list_total_value">480<span>грн</span></span></div>
-        <a href="backet.html" class="edit_order">Редактировать заказ</a>
+        <a href="" class="edit_order">Редактировать заказ</a>
       </div>
-  </div>
-</div>
+        </div>
+            </div>
         </div>
       </div>
     </div>
@@ -218,20 +221,20 @@
         </a>
         <a href="">
         <div class="popular_item">
-          <h3>Бумага</h3>
-          <img src="img/paper_hover.png" alt="">
+          <h3>Подарки</h3>
+          <img src="img/gift_hover.png" alt="">
         </div>
         </a>
         <a href="">
         <div class="popular_item">
-          <h3>Ежедневник</h3>
-          <img src="img/book_hover.png" alt="">
+          <h3>Офисная бумага</h3>
+          <img src="img/documents_hover.png" alt="">
         </div>
         </a>
         <a href="">
         <div class="popular_item">
-          <h3>Рюкзак</h3>
-          <img src="img/backpack_hover.png" alt="">
+          <h3>Ручки</h3>
+          <img src="img/pen_hover.png" alt="">
         </div>
         </a>
         <a href="">
@@ -267,7 +270,31 @@
       <div class="col-md-3 col-sm-6 product_card">
       <a href="card.html">
         <div class="product_card_item clearfix">
-          <img src="img/img1.png">
+          <img src="img/img3.png">
+          <div class="product_card_side">
+              <div class="cart_description">
+                <div class="marks">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star-o" aria-hidden="true"></i>
+                  <i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
+                </div>
+                <h4 class="product_card_head">Заголовок маркеровка</h4>
+                <div class="product_price">200 <span>грн</span></div>
+                </div>
+                <a class="product_buy_btn" href="backet.html">
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i><br>
+                    <span>Купить</span>
+                </a>
+              </div>
+              </a>
+        </div>
+     <div class="col-md-3 col-sm-6 product_card">
+      <a href="card.html">
+        <div class="product_card_item clearfix">
+          <img src="img/img4.png">
           <div class="product_card_side">
               <div class="cart_description">
                 <div class="marks">
@@ -312,10 +339,58 @@
               </div>
               </a>
         </div>
-     <div class="col-md-3 col-sm-6 product_card">
+        <div class="col-md-3 col-sm-6 product_card">
       <a href="card.html">
         <div class="product_card_item clearfix">
-          <img src="img/img1.png">
+          <img src="img/img2.png">
+          <div class="product_card_side">
+              <div class="cart_description">
+                <div class="marks">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star-o" aria-hidden="true"></i>
+                  <i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
+                </div>
+                <h4 class="product_card_head">Заголовок маркеровка</h4>
+                <div class="product_price">200 <span>грн</span></div>
+                </div>
+                <a class="product_buy_btn" href="backet.html">
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i><br>
+                    <span>Купить</span>
+                </a>
+              </div>
+              </a>
+        </div>
+        <div class="col-md-3 col-sm-6 product_card">
+      <a href="card.html">
+        <div class="product_card_item clearfix">
+          <img src="img/img3.png">
+          <div class="product_card_side">
+              <div class="cart_description">
+                <div class="marks">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star-o" aria-hidden="true"></i>
+                  <i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
+                </div>
+                <h4 class="product_card_head">Заголовок маркеровка</h4>
+                <div class="product_price">200 <span>грн</span></div>
+                </div>
+                <a class="product_buy_btn" href="backet.html">
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i><br>
+                    <span>Купить</span>
+                </a>
+              </div>
+              </a>
+        </div>
+        <div class="col-md-3 col-sm-6 product_card">
+      <a href="card.html">
+        <div class="product_card_item clearfix">
+          <img src="img/img4.png">
           <div class="product_card_side">
               <div class="cart_description">
                 <div class="marks">
@@ -363,7 +438,7 @@
         <div class="col-md-3 col-sm-6 product_card">
       <a href="card.html">
         <div class="product_card_item clearfix">
-          <img src="img/img1.png">
+          <img src="img/img2.png">
           <div class="product_card_side">
               <div class="cart_description">
                 <div class="marks">
@@ -387,79 +462,7 @@
         <div class="col-md-3 col-sm-6 product_card">
       <a href="card.html">
         <div class="product_card_item clearfix">
-          <img src="img/img1.png">
-          <div class="product_card_side">
-              <div class="cart_description">
-                <div class="marks">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star-o" aria-hidden="true"></i>
-                  <i class="fa fa-star-o" aria-hidden="true"></i>
-                </div>
-                </div>
-                <h4 class="product_card_head">Заголовок маркеровка</h4>
-                <div class="product_price">200 <span>грн</span></div>
-                </div>
-                <a class="product_buy_btn" href="backet.html">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i><br>
-                    <span>Купить</span>
-                </a>
-              </div>
-              </a>
-        </div>
-        <div class="col-md-3 col-sm-6 product_card">
-      <a href="card.html">
-        <div class="product_card_item clearfix">
-          <img src="img/img1.png">
-          <div class="product_card_side">
-              <div class="cart_description">
-                <div class="marks">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star-o" aria-hidden="true"></i>
-                  <i class="fa fa-star-o" aria-hidden="true"></i>
-                </div>
-                </div>
-                <h4 class="product_card_head">Заголовок маркеровка</h4>
-                <div class="product_price">200 <span>грн</span></div>
-                </div>
-                <a class="product_buy_btn" href="backet.html">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i><br>
-                    <span>Купить</span>
-                </a>
-              </div>
-              </a>
-        </div>
-        <div class="col-md-3 col-sm-6 product_card">
-      <a href="card.html">
-        <div class="product_card_item clearfix">
-          <img src="img/img1.png">
-          <div class="product_card_side">
-              <div class="cart_description">
-                <div class="marks">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star-o" aria-hidden="true"></i>
-                  <i class="fa fa-star-o" aria-hidden="true"></i>
-                </div>
-                </div>
-                <h4 class="product_card_head">Заголовок маркеровка</h4>
-                <div class="product_price">200 <span>грн</span></div>
-                </div>
-                <a class="product_buy_btn" href="backet.html">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i><br>
-                    <span>Купить</span>
-                </a>
-              </div>
-              </a>
-        </div>
-        <div class="col-md-3 col-sm-6 product_card">
-      <a href="card.html">
-        <div class="product_card_item clearfix">
-          <img src="img/img1.png">
+          <img src="img/img3.png">
           <div class="product_card_side">
               <div class="cart_description">
                 <div class="marks">
@@ -483,7 +486,7 @@
          <div class="col-md-3 col-sm-6 product_card">
       <a href="card.html">
         <div class="product_card_item clearfix">
-          <img src="img/img1.png">
+          <img src="img/img4.png">
           <div class="product_card_side">
               <div class="cart_description">
                 <div class="marks">
@@ -555,7 +558,7 @@
          <div class="col-md-3 col-sm-6 product_card">
       <a href="card.html">
         <div class="product_card_item clearfix">
-          <img src="img/img1.png">
+          <img src="img/img2.png">
           <div class="product_card_side">
               <div class="cart_description">
                 <div class="marks">
@@ -579,7 +582,7 @@
         <div class="col-md-3 col-sm-6 product_card">
       <a href="card.html">
         <div class="product_card_item clearfix">
-          <img src="img/img1.png">
+          <img src="img/img3.png">
           <div class="product_card_side">
               <div class="cart_description">
                 <div class="marks">
@@ -603,7 +606,7 @@
         <div class="col-md-3 col-sm-6 product_card">
       <a href="card.html">
         <div class="product_card_item clearfix">
-          <img src="img/img1.png">
+          <img src="img/img4.png">
           <div class="product_card_side">
               <div class="cart_description">
                 <div class="marks">
@@ -707,7 +710,9 @@
   </div>
 </footer>
 
-
+<div id="stop" class="scrollTop">
+        <span><a href=""><i class="fa fa-angle-up" aria-hidden="true"></i></a></span>
+      </div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/slick.min.js"></script>
