--- a/kancmatket_html/order_authorization.html
+++ b/kancmatket_html/order_authorization.html
@@ -19,9 +19,10 @@
   <div class="container clearfix top_nav">
    <a class="navbar-brand page-scroll" href="index.html"><img src="img/logo_new.png"  id="logo" alt="logo top"></a> 
     
-<div class="login"><i class="fa fa-user" aria-hidden="true"></i><span>Вход в личный кабинет</span>
-  <div class="login_item animated slideInDown clearfix">
-  <ul class="login_popup_tabs clearfix">
+        <div class="login">
+              <a href="" class="callback_btn2"><i class="fa fa-user" aria-hidden="true"></i>Вход в личный кабинет</a>
+              <div id="modal_form_recall2" class="login_item animated"> 
+                  <ul class="login_popup_tabs clearfix">
   <li class="active"><a data-toggle="tab" href="#home">Авторизация</a></li>
   <li class="noactive"><a data-toggle="tab" href="#menu1">Регистрация</a></li>
 </ul>
@@ -48,6 +49,7 @@
             <span>Зарегистрироваться</span>
         </a>
   </div>
+          
 </div>
   </div>
 </div>
@@ -96,10 +98,11 @@
         </div>
             </div>
           </div>
-         <div class="clearfix cart">
-          <a class="shopping_cart" href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
-          <div class="bucket animated slideInDown clearfix">
-   <div class="order_list_item">
+        <div class=" clearfix">
+            <div class="callback1">
+              <a href="" class="callback_btn1"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+              <div id="modal_form_recall1" class="animated"> 
+                  <div class="order_list_item">
       <span class="order_item_close"><i class="fa fa-times" aria-hidden="true"></i></span>
         <img src="img/order_list.png">
           <div class="order_list_description">
@@ -123,8 +126,8 @@
         <div class="order_list_total_item">Итого:<span class="order_list_total_value">480<span>грн</span></span></div>
         <a href="" class="edit_order">Редактировать заказ</a>
       </div>
-  </div>
-</div>
+        </div>
+            </div>
         </div>
       </div>
     </div>
